tests/transpiler/x/java/pure_fold.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:18 UTC
public class Main {
    static int triple(int x) {
        return x * 3;
    }
    public static void main(String[] args) {
        System.out.println((triple(1 + 2) == null ? "nil" : triple(1 + 2)));
    }
}
